--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.18.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
