--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,13 @@
 {
-  "extends": ["eslint:recommended", "react-minimal"]
+  "extends": ["eslint:recommended", "react-minimal"],
+  "globals": {
+        "process": true
+      },
+    "parser": "babel-eslint",
+    "rules": {
+    // suppress errors for missing 'import React' in files
+    "react/react-in-jsx-scope": "off",
+      // allow jsx syntax in js files (for next.js project)
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }] //should add ".ts" if typescript project
+  }
 }
