--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@supabase/supabase-js": "^1.18.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
