--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.18.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-is": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0"
   },
