--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@supabase/supabase-js": "^1.18.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fs": "*",
+    "immutability-helper": "^3.1.1",
     "react": "^17.0.0",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.0",
     "react-is": "^17.0.2",
     "react-router-dom": "^5.2.0",
