--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fs": "*",
     "immutability-helper": "^3.1.1",
     "react": "^17.0.0",
+    "react-burger-menu": "^3.0.6",
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.0",
