--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "immutability-helper": "^3.1.1",
     "react": "^17.0.0",
     "react-burger-menu": "^3.0.6",
+    "react-collapsible": "^2.8.3",
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.0",
