--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.0",
     "react-is": "^17.0.2",
+    "react-responsive-carousel": "^3.2.20",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0"
   },
