--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@supabase/supabase-js": "^1.18.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fs": "*",
+    "html2canvas": "^1.1.5",
     "immutability-helper": "^3.1.1",
     "react": "^17.0.0",
     "react-burger-menu": "^3.0.6",
@@ -19,7 +20,8 @@
     "react-is": "^17.0.2",
     "react-responsive-carousel": "^3.2.20",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "use-react-screenshot": "^1.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
