--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@supabase/supabase-js": "^1.18.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fs": "*",
+    "html-to-image": "^1.7.0",
     "html2canvas": "^1.1.5",
     "immutability-helper": "^3.1.1",
     "react": "^17.0.0",
