--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.0",
+    "react-error-boundary": "^3.1.3",
     "react-is": "^17.0.2",
     "react-responsive-carousel": "^3.2.20",
     "react-router-dom": "^5.2.0",
