--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-is": "^17.0.2",
     "react-responsive-carousel": "^3.2.20",
     "react-router-dom": "^5.2.0",
+    "react-supabase": "^0.2.0",
     "styled-components": "^5.3.0",
     "use-react-screenshot": "^1.0.2"
   },
